[gd_scene load_steps=17 format=1]

[ext_resource path="res://src/home.gd" type="Script" id=1]
[ext_resource path="res://scenes/home_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/particular/backgroundOk.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/particular/unnamed.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/particular/award-symbol.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/cocogoose_trial.otf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/nd_feedback.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/particular/blue_button07.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/particular/letter.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/particular/opened-email.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/particular/user.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/particular/feedback.png" type="Texture" id=12]
[ext_resource path="res://scenes/nd_perfil.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/nd_notification.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[sub_resource type="Animation" id=2]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("txb_notification:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("txb_notification:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("txb_profile:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("txb_profile:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("txb_feedback:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("txb_feedback:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="nd_home" type="Node2D"]

script/script = ExtResource( 1 )

[node name="nd_home_screen" parent="." instance=ExtResource( 2 )]

[node name="spr_background" type="Sprite" parent="."]

transform/pos = Vector2( 0, -3.09082 )
z/z = -10
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="spr_logo" type="Sprite" parent="."]

transform/pos = Vector2( 355, 250 )
transform/scale = Vector2( 2, 2 )
z/z = -9
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="spr_score" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 636, 88 )
transform/scale = Vector2( 1.2, 1.3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="spr_score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -36.0
margin/top = -27.0
margin/right = 37.0
margin/bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "50"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="nd_feedback" parent="." instance=ExtResource( 7 )]

[node name="txb_notification" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 1043.0
margin/right = 180.0
margin/bottom = 1190.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="txb_notification"]

visibility/visible = false
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 18.0
margin/right = 150.0
margin/bottom = 146.0
texture = ExtResource( 9 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame 2" type="TextureFrame" parent="txb_notification"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 18.0
margin/right = 150.0
margin/bottom = 146.0
texture = ExtResource( 10 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txb_profile" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 1043.0
margin/right = 253.0
margin/bottom = 1092.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="TextureFrame" type="TextureFrame" parent="txb_profile"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 18.0
margin/right = 150.0
margin/bottom = 146.0
texture = ExtResource( 11 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txb_feedback" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 376.0
margin/top = 1043.0
margin/right = 523.0
margin/bottom = 1190.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txb_feedback" type="TextureFrame" parent="txb_feedback"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 18.0
margin/right = 150.0
margin/bottom = 146.0
texture = ExtResource( 12 )
modulate = Color( 0.015625, 0.0152588, 0.0152588, 1 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="anp_home" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/view_controls = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="nd_perfil" parent="." instance=ExtResource( 13 )]

[node name="nd_notification" parent="." instance=ExtResource( 14 )]


